chore(nx-nest): dependency versions, dockerignore file

--- a/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
@@ -36,7 +36,7 @@ database: <% if (database === DATABASE.TYPEORM) { %>
   username: user
   password: secret
   host: localhost
-  type: # mysql | postgresql
+  type: # mysql | postgres (driver must be installed separately)
   port: # 3306 | 5432
   synchronize: false
   cache: false
