--- a/packages/nx-nest/src/generators/application/files/task/modules/index.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/task/modules/index.ts.ejs
@@ -1,4 +1,4 @@
-<% if (database !== DATABASE.NONE) { %>
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>
 export * from '@<%- scope %>/database/util/migration-task/migration.module'
 <% } %>
 
