--- a/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
@@ -28,23 +28,28 @@ messageQueue:
   urls:
     - amqp://rabbitmq:5672
 <% } -%>
-<% if (database !== DATABASE.NONE) { %>
-database: <% if (database === DATABASE.TYPEORM) { %>
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>
+database: <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>
   database: db
   mock:
     database: db_mock
   username: user
   password: secret
   host: localhost
-  type: # mysql | postgres (driver must be installed separately)
-  port: # 3306 | 5432
+  type: <% if (database === DATABASE.MYSQL) { %>mysql<%
+  } else if (database === DATABASE.POSTGRES) { %>postgres<%
+  } else { %># @todo: set driver<% } %>
+  port: <% if (database === DATABASE.MYSQL) { %>3306<%
+  } else if (database === DATABASE.POSTGRES) { %>5432<%
+  } else { %># @todo: set port<% } %>
   synchronize: false
   cache: false
   keepConnectionAlive: true
   directories:
     entity: entity
     migration: migration
-<% } else if (database === DATABASE.MONGOOSE) { %>
+    seed: seed
+<% } else if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>
   host: localhost
   ignoreUndefined: true
   useNewUrlParser: true
