--- a/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
@@ -1,24 +1,24 @@
 import { Module, NestModule } from '@nestjs/common'
-<% if (database === DATABASE.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
-<% if (database === DATABASE.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
+<% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
+<% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
 
 import * as modules from './modules'
-<% if (database !== DATABASE.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>' <% } %>
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>' <% } %>
 import {ConfigService } from '@webundsoehne/nestjs-util'
 <% if (microserviceProvider) { %>import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util-microservices'<% } -%>
 
 /**
   * Utilizes (nestjs-commander)[https://docs.nestjs.com/recipes/nest-commander].
  */
-<% if (database !== DATABASE.NONE) { %>export function createCommandModule (mock = false): new(mock: boolean) => NestModule {
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>export function createCommandModule (mock = false): new(mock: boolean) => NestModule {
 <% } else { -%>export function createCommandModule (): new() => NestModule { <% } %>
 @Module({
   providers: [
     ConfigService
   ],
   imports: [
-    <% if (database === DATABASE.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
-    <% if (database === DATABASE.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
     <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
     ...Object.values(modules)
     ]
