--- a/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
@@ -1,10 +1,10 @@
 import { MiddlewareConsumer, Module, NestModule, RequestMethod } from '@nestjs/common'
 import { APP_FILTER, APP_INTERCEPTOR, APP_PIPE } from '@nestjs/core'
-<% if (database === DATABASE.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
-<% if (database === DATABASE.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
+<% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
+<% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
 
 import * as modules from './modules'
-<% if (database !== DATABASE.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>'<% } %>
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>'<% } %>
 import {
   ConfigService,
   BadRequestExceptionFilter,
@@ -22,7 +22,7 @@ import {
 } from '@webundsoehne/nestjs-util-restful'
 <% if (microserviceProvider) { %>import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util-microservices'<% } -%>
 
-<% if (database !== DATABASE.NONE) { %>export function createServerModule (mock = false): new(mock: boolean) => NestModule {
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>export function createServerModule (mock = false): new(mock: boolean) => NestModule {
 <% } else { -%>export function createServerModule (): new() => NestModule {<% } %>
   @Module({
     providers: [
@@ -49,8 +49,8 @@ import {
       }
     ],
     imports: [
-      <% if (database === DATABASE.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
-      <% if (database === DATABASE.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
       <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
       InternalModule,
       MaintenanceModule,
