--- a/packages/nx-nest/src/generators/application/files/task/task.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/task/task.module.ts.ejs
@@ -1,17 +1,17 @@
 import { Module, NestModule } from '@nestjs/common'
 import { ScheduleModule } from '@nestjs/schedule'
-<% if (database === DATABASE.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
-<% if (database === DATABASE.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
+<% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>import { TypeOrmModule } from '@nestjs/typeorm'<% } %>
+<% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>import { MongooseModule } from '@nestjs/mongoose'<% } %>
 
 import * as tasks from './modules'
-<% if (database !== DATABASE.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>'<% } %>
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>import { getDatabaseOptions } from '<%- orm.importPath -%>'<% } %>
 import { ConfigService } from '@webundsoehne/nestjs-util'
 <% if (microserviceProvider) { %>import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util-microservices'<% } -%>
 
 /**
  * Register all services under providers
  */
-<% if (database !== DATABASE.NONE) { %>export function createTaskModule (mock = false): new(mock: boolean) => NestModule {
+<% if (databaseOrm !== DATABASE_ORM.NONE) { %>export function createTaskModule (mock = false): new(mock: boolean) => NestModule {
 <% } else { -%>export function createTaskModule (): new() => NestModule { <% } %>
   @Module({
     providers: [
@@ -19,8 +19,8 @@ import { ConfigService } from '@webundsoehne/nestjs-util'
     ],
     imports: [
       ScheduleModule.forRoot(),
-      <% if (database === DATABASE.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
-      <% if (database === DATABASE.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
       <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
       ...Object.values(tasks)
       ]
