chore(nx-nest): node version constant

--- a/packages/nx-nest/src/generators/application/files/base/package.json.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/package.json.ejs
@@ -7,6 +7,6 @@
   "repository": "https://gitlab.diamir.tech/",
   "scripts": {},
   "engines": {
-    "node": ">=20"
+    "node": ">=<%= NODE_VERSION %>"
   }
 }
