--- a/packages/nx-nest/src/generators/workspace/files/.gitlab-ci.yml.ejs
+++ b/packages/nx-nest/src/generators/workspace/files/.gitlab-ci.yml.ejs
@@ -1,6 +1,6 @@
 ---
 variables:
-  NODE_VERSION: 18-alpine
+  NODE_VERSION: <%= NODE_VERSION %>-alpine
   ## NODE OPTIONS
   # install: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#install
   # build: https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/tree/main/node#build
