fix(nx-nest): database dependencies, config
Fix template for database options, remove mock setup, pick correct dependencies for selected database

--- a/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
@@ -10,15 +10,14 @@ import {ConfigService } from '@webundsoehne/nestjs-util'
 /**
   * Utilizes (nestjs-commander)[https://docs.nestjs.com/recipes/nest-commander].
  */
-<% if (databaseOrm !== DATABASE_ORM.NONE) { %>export function createCommandModule (mock = false): new(mock: boolean) => NestModule {
-<% } else { -%>export function createCommandModule (): new() => NestModule { <% } %>
+export function createCommandModule (): new() => NestModule {
 @Module({
   providers: [
     ConfigService
   ],
   imports: [
-    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
-    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
     <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
     ...Object.values(modules)
     ]
