--- a/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
@@ -22,8 +22,7 @@ import {
 } from '@webundsoehne/nestjs-util-restful'
 <% if (microserviceProvider) { %>import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util-microservices'<% } -%>
 
-<% if (databaseOrm !== DATABASE_ORM.NONE) { %>export function createServerModule (mock = false): new(mock: boolean) => NestModule {
-<% } else { -%>export function createServerModule (): new() => NestModule {<% } %>
+export function createServerModule (): new() => NestModule {
   @Module({
     providers: [
       ConfigService,
@@ -49,8 +48,8 @@ import {
       }
     ],
     imports: [
-      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions(mock)),<% } -%>
-      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(getDatabaseOptions(mock)),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
+      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
       <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
       InternalModule,
       MaintenanceModule,
