--- a/packages/nx-nest/src/generators/application/files/base/config/custom-environment-variables.yml.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/config/custom-environment-variables.yml.ejs
@@ -30,5 +30,5 @@ database:
   password: DATABASE_PASSWORD
   database: DATABASE_NAME <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>
   type: DATABASE_TYPE
-  migrationsTableName: DATABASE_MIGRATIONS_TABLE <% }
+  migrationsTableName: DATABASE_MIGRATIONS_TABLE <% } %>
 <% } -%>
