fix(nx-nest): remove module wrapper `create[..]` function

--- a/packages/nx-nest/src/generators/application/files/jest/e2e/files/test/server.e2e-spec.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/jest/e2e/files/test/server.e2e-spec.ts.ejs
@@ -3,14 +3,12 @@ import { FastifyAdapter } from '@nestjs/platform-fastify'
 import type { TestingModule } from '@nestjs/testing'
 import { Test } from '@nestjs/testing'
 
-import { createServerModule } from '../src/server/server.module'
+import { ServerModule } from '../src/server/server.module'
 
 describe('Server (e2e)', () => {
   let app: NestFastifyApplication
 
   beforeAll(async () => {
-    const ServerModule = createServerModule(true)
-
     const moduleRef: TestingModule = await Test.createTestingModule({
       imports: [ServerModule]
     }).compile()
