--- a/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/command/command.module.ts.ejs
@@ -10,7 +10,6 @@ import {ConfigService } from '@webundsoehne/nestjs-util'
 /**
   * Utilizes (nestjs-commander)[https://docs.nestjs.com/recipes/nest-commander].
  */
-export function createCommandModule (): new() => NestModule {
 @Module({
   providers: [
     ConfigService
@@ -22,10 +21,7 @@ export function createCommandModule (): new() => NestModule {
     ...Object.values(modules)
     ]
 })
-  class CommandModule implements NestModule {
-    // eslint-disable-next-line @typescript-eslint/no-empty-function
-    async configure (): Promise<any> {}
-  }
-
-  return CommandModule
+export class CommandModule implements NestModule {
+  // eslint-disable-next-line @typescript-eslint/no-empty-function
+  async configure (): Promise<any> {}
 }
