--- a/packages/nx-nest/src/generators/application/files/microservice/init.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/microservice/init.ts.ejs
@@ -2,14 +2,14 @@ import { NestFactory } from '@nestjs/core'
 import type { MicroserviceOptions } from '@nestjs/microservices'
 import { Transport } from '@nestjs/microservices'
 
-import { createMicroserviceModule } from './microservice.module'
+import { MicroservicesModule } from './microservice.module'
 import { MessageQueues } from '<%- msp.importPath -%>'
 import { ConfigService, LoggerService } from '@webundsoehne/nestjs-util'
 
 export async function createApplication (): Promise<void> {
   const { urls } = ConfigService.get('messageQueue')
 
-  const app = await NestFactory.createMicroservice<MicroserviceOptions>(createMicroserviceModule(), {
+  const app = await NestFactory.createMicroservice<MicroserviceOptions>(MicroservicesModule, {
     logger: new LoggerService(),
     transport: Transport.RMQ,
     options: {
