--- a/packages/nx-nest/src/generators/application/files/microservice/microservice.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/microservice/microservice.module.ts.ejs
@@ -8,38 +8,34 @@ import * as modules from './modules'
 import { ConfigService, GlobalExceptionFilter, ExtendedValidationPipe } from '@webundsoehne/nestjs-util'
 import { <% if (microserviceProvider) { %>MicroserviceProviderModule, <% } %>RpcGlobalExceptionFilter } from '@webundsoehne/nestjs-util-microservices'
 
-export function createMicroserviceModule (): new() => NestModule {
-  @Module({
-    providers: [
-      ConfigService,
-      {
-        provide: APP_PIPE,
-        useClass: ExtendedValidationPipe
-      },
-      {
-        provide: APP_INTERCEPTOR,
-        useClass: ClassSerializerInterceptor
-      },
-      {
-        provide: APP_FILTER,
-        useClass: GlobalExceptionFilter
-      },
-      {
-        provide: APP_FILTER,
-        useClass: RpcGlobalExceptionFilter
-      }
-    ],
-    imports: [
-      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
-      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
-      <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
-      ...Object.values(modules)
-    ]
-  })
-  class MicroservicesModule implements NestModule {
-    // eslint-disable-next-line @typescript-eslint/no-empty-function
-    async configure (): Promise<any> {}
-  }
-
-  return MicroservicesModule
+@Module({
+  providers: [
+    ConfigService,
+    {
+      provide: APP_PIPE,
+      useClass: ExtendedValidationPipe
+    },
+    {
+      provide: APP_INTERCEPTOR,
+      useClass: ClassSerializerInterceptor
+    },
+    {
+      provide: APP_FILTER,
+      useClass: GlobalExceptionFilter
+    },
+    {
+      provide: APP_FILTER,
+      useClass: RpcGlobalExceptionFilter
+    }
+  ],
+  imports: [
+    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
+    <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
+    ...Object.values(modules)
+  ]
+})
+export class MicroservicesModule implements NestModule {
+  // eslint-disable-next-line @typescript-eslint/no-empty-function
+  async configure (): Promise<any> {}
 }
