--- a/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
@@ -2,12 +2,12 @@ import { NestFactory } from '@nestjs/core'
 import type { NestFastifyApplication } from '@nestjs/platform-fastify'
 import { FastifyAdapter } from '@nestjs/platform-fastify'
 
-import { createServerModule } from './server.module'
+import { ServerModule } from './server.module'
 import { LoggerService, ConfigService } from '@webundsoehne/nestjs-util'
 import { SwaggerService } from '@webundsoehne/nestjs-util-restful'
 
 export async function createApplication (): Promise<void> {
-  const app = await NestFactory.create<NestFastifyApplication>(createServerModule(), new FastifyAdapter(), {
+  const app = await NestFactory.create<NestFastifyApplication>(ServerModule, new FastifyAdapter(), {
     logger: new LoggerService()
   })
 
