--- a/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/server.module.ts.ejs
@@ -22,49 +22,45 @@ import {
 } from '@webundsoehne/nestjs-util-restful'
 <% if (microserviceProvider) { %>import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util-microservices'<% } -%>
 
-export function createServerModule (): new() => NestModule {
-  @Module({
-    providers: [
-      ConfigService,
-      {
-        provide: APP_FILTER,
-        useClass: GlobalExceptionFilter
-      },
-      {
-        provide: APP_FILTER,
-        useClass: BadRequestExceptionFilter
-      },
-      {
-        provide: APP_PIPE,
-        useClass: ExtendedValidationPipe
-      },
-      {
-        provide: APP_INTERCEPTOR,
-        useClass: CacheLifetimeHelperInterceptor
-      },
-      {
-        provide: APP_INTERCEPTOR,
-        useClass: RequestProfilerInterceptor
-      }
-    ],
-    imports: [
-      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
-      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
-      <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
-      InternalModule,
-      MaintenanceModule,
-      ...Object.values(modules)
-      ]
-  })
-  class ServerModule implements NestModule {
-    async configure (consumer: MiddlewareConsumer): Promise<void> {
-      await setEnvironmentVariables()
-
-      consumer
-        .apply(MaintenanceMiddleware, SetApiInfoHeaderMiddleware)
-        .forRoutes({ path: '(.*)', method: RequestMethod.ALL })
+@Module({
+  providers: [
+    ConfigService,
+    {
+      provide: APP_FILTER,
+      useClass: GlobalExceptionFilter
+    },
+    {
+      provide: APP_FILTER,
+      useClass: BadRequestExceptionFilter
+    },
+    {
+      provide: APP_PIPE,
+      useClass: ExtendedValidationPipe
+    },
+    {
+      provide: APP_INTERCEPTOR,
+      useClass: CacheLifetimeHelperInterceptor
+    },
+    {
+      provide: APP_INTERCEPTOR,
+      useClass: RequestProfilerInterceptor
     }
-  }
+  ],
+  imports: [
+    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
+    <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
+    InternalModule,
+    MaintenanceModule,
+    ...Object.values(modules)
+    ]
+})
+export class ServerModule implements NestModule {
+  async configure (consumer: MiddlewareConsumer): Promise<void> {
+    await setEnvironmentVariables()
 
-  return ServerModule
+    consumer
+      .apply(MaintenanceMiddleware, SetApiInfoHeaderMiddleware)
+      .forRoutes({ path: '(.*)', method: RequestMethod.ALL })
+  }
 }
