--- a/packages/nx-nest/src/generators/application/files/task/task.module.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/task/task.module.ts.ejs
@@ -11,23 +11,19 @@ import { ConfigService } from '@webundsoehne/nestjs-util'
 /**
  * Register all services under providers
  */
-export function createTaskModule (): new() => NestModule {
-  @Module({
-    providers: [
-      ConfigService
-    ],
-    imports: [
-      ScheduleModule.forRoot(),
-      <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
-      <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
-      <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
-      ...Object.values(tasks)
-      ]
-  })
-  class TaskModule implements NestModule {
-    // eslint-disable-next-line @typescript-eslint/no-empty-function
-    async configure (): Promise<any> {}
-  }
-
-  return TaskModule
+@Module({
+  providers: [
+    ConfigService
+  ],
+  imports: [
+    ScheduleModule.forRoot(),
+    <% if (databaseOrm === DATABASE_ORM.TYPEORM) { %>TypeOrmModule.forRoot(getDatabaseOptions()),<% } -%>
+    <% if (databaseOrm === DATABASE_ORM.MONGOOSE) { %>MongooseModule.forRoot(...getDatabaseOptions()),<% } -%>
+    <% if (microserviceProvider) { %>MicroserviceProviderModule.forRoot({ queue: [] }),<% } -%>
+    ...Object.values(tasks)
+    ]
+})
+export class TaskModule implements NestModule {
+  // eslint-disable-next-line @typescript-eslint/no-empty-function
+  async configure (): Promise<any> {}
 }
