chore(nx-nest): new fastify-application `.listen` arguments
Old `(port, host)` will get deprecated, switching to new options argument.

--- a/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
@@ -20,5 +20,11 @@ export async function createApplication (): Promise<void> {
 
   SwaggerService.enable(app)
 
-  await app.listen(port, '0.0.0.0')
+  await app.listen({ port, host: '0.0.0.0' }, (error, address) => {
+    if (error) {
+      Logger.error(`Error creating application: ${error.message}`)
+    }
+
+    Logger.log(`Listening on ${address}`, 'NestApplication')
+  })
 }
