--- a/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/server/init.ts.ejs
@@ -1,3 +1,4 @@
+import { Logger } from '@nestjs/common'
 import { NestFactory } from '@nestjs/core'
 import type { NestFastifyApplication } from '@nestjs/platform-fastify'
 import { FastifyAdapter } from '@nestjs/platform-fastify'
