feat(nx-nest): move nx cache up a level
Move nx cache folder outside workspace mount volume.

--- a/packages/nx-nest/src/generators/workspace/files/docker-compose.yml.ejs
+++ b/packages/nx-nest/src/generators/workspace/files/docker-compose.yml.ejs
@@ -6,9 +6,12 @@ services:
         ports:
             - "3000:3000"
         working_dir: /opt/workspace
+        environment:
+            NX_CACHE_DIRECTORY: /opt/.nx/cache
+            NX_WORKSPACE_DATA_DIRECTORY: /opt/.nx/cache
         volumes:
             - .:/opt/workspace
-            - nx_cache:/opt/workspace/.nx
+            - nx_cache:/opt/.nx
         command: npm run start
 volumes:
     # container requires "self-generated" cache dir
