feat(nx-nest): split test and e2e targets

--- a/packages/nx-nest/src/generators/application/files/jest/e2e/files/test/server.e2e-spec.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/jest/e2e/files/test/server.e2e-spec.ts.ejs
@@ -29,7 +29,7 @@ describe('Server (e2e)', () => {
     })
 
     test('should be able to inject requests', async () => {
-      expect(app.inject()).toBeDefined()
+      expect(app.inject).toBeDefined()
     })
   })
 })
