--- a/packages/nx-nest/src/generators/database-orm/files/mongoose/src/util/migration-task/migration.task.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/mongoose/src/util/migration-task/migration.task.ts.ejs
@@ -16,8 +16,24 @@ export class MigrationTask {
     interval: 3 * 1000
   })
   async migrateMongoose (): Promise<void> {
+    const options = mongooseMigrateConfig()
+
+    if (!options?.migrationsDir) {
+      this.logger.warn('No migrations folder configured')
+
+      return
+    }
+
     try {
-      config.set(mongooseMigrateConfig)
+      await stat(options.migrationsDir)
+    } catch (error) {
+      this.logger.warn(`No migrations folder found in "${options.migrationsDir}"`)
+
+      return
+    }
+
+    try {
+      config.set(options)
 
       const { db, client } = await database.connect()
       const migrated = await up(db, client)
