--- a/packages/nx-nest/src/generators/database-orm/files/mongoose/src/util/migration-task/migration.task.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/mongoose/src/util/migration-task/migration.task.ts.ejs
@@ -1,6 +1,7 @@
 import { Injectable, Logger } from '@nestjs/common'
 import { Timeout } from '@nestjs/schedule'
 import { config, database, up } from 'migrate-mongo'
+import { stat } from 'node:fs/promises'
 
 import * as mongooseMigrateConfig from '../../database/migrate-options'
 import { Retry, UseMaintenanceLocker } from '@webundsoehne/nestjs-util'
