--- a/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
@@ -5,15 +5,14 @@ import { ConfigService } from '@webundsoehne/nestjs-util'
 
 const { directories, ...options } = ConfigService.get('database')
 const entitiesDir = join(__dirname, '../entity')
-const migrationsDir = join(__dirname, '../migration')
+export const migrationsDir = join(__dirname, '../migration')
 
-export function getDatabaseOptions (): DataSourceOptions & { cli: { entitiesDir: string, migrationsDir: string } } {
+export function getDatabaseOptions (): DataSourceOptions {
   const databaseOptions: DataSourceOptions = {
     ...options,
     entities: [`${entitiesDir}/*{.ts,.js}`],
-    migrations: [`${migrationsDir}/*{.ts,.js}`],
-    cli: { entitiesDir, migrationsDir }
+    migrations: [`${migrationsDir}/*{.ts,.js}`]
   }
 
-return databaseOptions
+  return databaseOptions
 }
