--- a/packages/nx-nest/src/generators/application/files/base/config/custom-environment-variables.yml.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/config/custom-environment-variables.yml.ejs
@@ -14,7 +14,7 @@ swagger:
   useHttps:
     __name: USE_HTTPS
     __format: json
-  basePath: API_BASE_PATH
+  path: SWAGGER_PATH
 <% } -%>
 <% if (includeMessageQueue) { %>
 messageQueue:
