feat(nx-nest): database target generator
Generate database related targets and package.json scripts.

--- a/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
@@ -3,16 +3,14 @@ import type { DataSourceOptions } from 'typeorm'
 
 import { ConfigService } from '@webundsoehne/nestjs-util'
 
-const { directories, ...options } = ConfigService.get('database')
+const options = ConfigService.get('database')
 const entitiesDir = join(__dirname, '../entity')
 export const migrationsDir = join(__dirname, '../migration')
 
 export function getDatabaseOptions (): DataSourceOptions {
-  const databaseOptions: DataSourceOptions = {
+  return {
     ...options,
     entities: [`${entitiesDir}/*{.ts,.js}`],
     migrations: [`${migrationsDir}/*{.ts,.js}`]
-  }
-
-  return databaseOptions
+  } satisfies DataSourceOptions
 }
