chore(nx-nest): update backend contact email

--- a/packages/nx-nest/src/generators/application/files/base/package.json.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/package.json.ejs
@@ -2,7 +2,7 @@
   "name": "<%= packageScope %>",
   "version": "0.0.1",
   "description": "Tailored NestJS NX Based Application Skeleton",
-  "author": "Backend <backend@webundsoehne.com>",
+  "author": "Backend <backend@diamir.io>",
   "license": "ISC",
   "repository": "https://gitlab.diamir.tech/",
   "scripts": {},
