--- a/packages/nx-nest/src/generators/workspace/files/docker-compose.yml.ejs
+++ b/packages/nx-nest/src/generators/workspace/files/docker-compose.yml.ejs
@@ -11,8 +11,5 @@ services:
             NX_WORKSPACE_DATA_DIRECTORY: /opt/.nx/workspace-data
         volumes:
             - .:/opt/workspace
-            - nx_cache:/opt/.nx
+            - /opt/.nx
         command: npm run start
-volumes:
-    # container requires "self-generated" cache dir
-    nx_cache:
