chore(nx-nest): new gitlab-pipes

--- a/packages/nx-nest/src/generators/workspace/files/.gitlab-ci.yml.ejs
+++ b/packages/nx-nest/src/generators/workspace/files/.gitlab-ci.yml.ejs
@@ -23,11 +23,11 @@ include:
   # https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/blob/main/templates/node-nx.gitlab-ci.yml
   - project: bdsm/gitlab-pipes
     file: /templates/node-nx.gitlab-ci.yml
-    ref: main
+    ref: next
   # https://gitlab.tailored-apps.com/bdsm/gitlab-pipes/-/blob/main/templates/v2/docker-build-internal.gitlab-ci.yml
   - project: bdsm/gitlab-pipes
     file: /templates/v2/docker-build-internal.gitlab-ci.yml
-    ref: main
+    ref: next
 #
 ##################################
 ##        applications         ##
