feat(nx-nest): microservice server generation, docker-compose env-vars
Set env-vars for nx in docker-compose.

--- a/packages/nx-nest/src/generators/application/files/microservice/init.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/microservice/init.ts.ejs
@@ -3,7 +3,7 @@ import type { MicroserviceOptions } from '@nestjs/microservices'
 import { Transport } from '@nestjs/microservices'
 
 import { MicroservicesModule } from './microservice.module'
-import { MessageQueues } from '<%- msp.importPath -%>'
+<%# MessageQueue import added by generator %>
 import { ConfigService, LoggerService } from '@webundsoehne/nestjs-util'
 
 export async function createApplication (): Promise<void> {
